syntax = "proto3";

package user;

option go_package = "github.com/shatwik7/polycrate/libs/proto/user;userpb";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string profile_picture_url = 5;
  string bio = 6;
  string website = 7;
  string location = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string full_name = 3;
  string profile_picture_url = 4;
  string bio = 5;
  string password = 6;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string full_name = 2;
  string profile_picture_url = 3;
  string bio = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListUsersResponse {
  repeated User users = 1;
}

message SearchByEmailRequest {
  string email = 1;
}

message SearchByEmailResponse {
  User user = 1;
}

message SearchByUsernameRequest {
  string username = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message SearchByUsernameResponse {
  repeated User users = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string token = 2;
}

message ValidateRequest {
  string email = 1;
  string password = 2;
}

message ValidateResponse {
  bool valid = 1;
}

message ChangePasswordRequest {
  string id = 1;
  string new_password = 2;
}

message ChangePasswordResponse {
  bool success = 1;
}

message DeactivateUserRequest {
  string id = 1;
}

message DeactivateUserResponse {
  bool success = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc SearchByEmail(SearchByEmailRequest) returns (SearchByEmailResponse);
  rpc SearchByUsername(SearchByUsernameRequest) returns (SearchByUsernameResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc DeactivateUser(DeactivateUserRequest) returns (DeactivateUserResponse);
}
